# BoB-AI

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Server-shutdown.sh  Server-startup.sh  build.sh  desktop.sh  docker-compose.remote.yml  docker-compose.yml  key.sh  package-lock.json  package.json  start.sh  test.sh  validate.sh
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/bob-core/: Cargo.toml
crates/bob-core/src/: config.rs  db_manager.rs  db_migrations.rs  db_policy.rs  error.rs  fs_cache.rs  fs_watch.rs  lib.rs  ollama.rs  permissions.rs  service_bootstrap.rs
deploy/: Caddyfile
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: lib.rs  main.rs
scripts/: Server-shutdown.cmd  Server-shutdown.sh  Server-startup.cmd  Server-startup.sh  bob.mjs  build.cmd  build.sh  desktop.cmd  desktop.sh  key.sh  start.sh  test.cmd  test.sh  validate.cmd  validate.sh
web/: README.md  package-lock.json  package.json  svelte.config.js
web/src/: app.css
web/src/lib/: tauri.ts
web/src/routes/: +page.svelte
