[package]
name = "bob-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bob-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bob-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
