[package]
name = "bob-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bob-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum.workspace = true
bob-core.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
