[package]
name = "bob-desktop"
version.workspace = true
edition.workspace = true
description = "BoB desktop shell"

[lib]
name = "bob_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow.workspace = true
bob-core.workspace = true
keyring = "3"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0.0", features = [] }
ureq = { version = "2.10", features = ["json"] }
