[package]
name = "bob-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
bincode = "1.3"
deadpool-postgres = { workspace = true }
futures = { workspace = true }
glob = "0.3"
notify = "7"
postgres = "0.19"
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
